--- a/index.html
+++ b/index.html
@@ -224,7 +224,16 @@
       <!-- Profilepage -->
       <div class="container">
         <article class="container--profilepage hidden" data-js="profile-page">
-          <p>Profilepage</p>
+          <p class="profilepage--headline">Profile</p>
+          <img class="profilepage--picture" src="./pictures/profile_icon.png" width="150px" height="150px" alt="Profilbild">
+          <p class="profilepage--name">John Doe</p>
+          <p class="profilepage--aboutme">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est repellat delectus modi quibusdam doloremque, facere odio esse temporibus fugit sunt.</p>
+          <button class="profilepage--questionscounter">Questionscounter</button>
+          <button class="profilepage--bookmarkscounter">Bookmarkscounter</button>
+          <p class="profilepage--headlinesettings">Settings</p>
+          <p class="profilepage--darkmodetext"></p>
+          <button class="profilepage--darkmodebutton">Darkmode</button>
+          </article>
         </article>
       </div>
       <!-- Navbar -->
