finised all funktions

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="container">
         <article class="container--quizcardpage" data-js="quizcard-page">
           <!-- Quizcard 1 -->
-          <article class="quicardpage--quizcard" data-js="quizcard">
+          <article class="quizcardpage--quizcard" data-js="quizcard">
             <!-- add Bookmark Icon -->
             <img
               src="./pictures/bookmark_icon.png"
@@ -44,7 +44,7 @@
             </ul>
           </article>
           <!-- Quizcard 2 -->
-          <article class="quicardpage--quizcard" data-js="quizcard">
+          <article class="quizcardpage--quizcard" data-js="quizcard">
             <!-- add Bookmark Icon -->
             <img
               src="./pictures/bookmark_icon.png"
@@ -70,7 +70,7 @@
             </ul>
           </article>
           <!-- Quizcard 3 -->
-          <article class="quicardpage--quizcard" data-js="quizcard">
+          <article class="quizcardpage--quizcard" data-js="quizcard">
             <!-- add Bookmark Icon -->
             <img
               src="./pictures/bookmark_icon.png"
@@ -100,7 +100,7 @@
             </ul>
           </article>
           <!-- Quizcard 4 -->
-          <article class="quicardpage--quizcard" data-js="quizcard">
+          <article class="quizcardpage--quizcard" data-js="quizcard">
             <!-- add Bookmark Icon -->
             <img
               src="./pictures/bookmark_icon.png"
@@ -126,7 +126,7 @@
             </ul>
           </article>
           <!-- Quizcard 5 -->
-          <article class="quicardpage--quizcard" data-js="quizcard">
+          <article class="quizcardpage--quizcard" data-js="quizcard">
             <!-- add Bookmark Icon -->
             <img
               src="./pictures/bookmark_icon.png"
@@ -168,7 +168,7 @@
               alt="bookmark icon"
               width="40px"
               height="40px"
-              class="quizcard--bookmarkicon"
+              class="quizcard--bookmarkicon2"
             />
             <!-- add Question-->
             <p class="quizcard--question">
