z index problem solved

--- a/index.html
+++ b/index.html
@@ -168,18 +168,17 @@
               alt="bookmark icon"
               width="40px"
               height="40px"
-              class="quizcard--bookmarkicon2"
             />
             <!-- add Question-->
-            <p class="quizcard--question">
+            <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, eos!?
             </p>
             <!-- add hideable Answer -->
-            <p class="quizcard--answer hidden">Lorem, ipsum dolor.</p>
+            <p>Lorem, ipsum dolor.</p>
             <!-- add Asnwerbutton -->
-            <button class="quizcard--answerbutton">Show Answer</button>
+            <button>Show Answer</button>
             <!-- add Hashtags -->
-            <ul class="quizcard--hashtag">
+            <ul>
               <li># Lorem, ipsum.</li>
               <li># Lorem, ipsum.</li>
               <li># Lorem, ipsum.</li>
@@ -189,7 +188,7 @@
       </div>
       <!-- Addpagepage -->
       <div class="container">
-        <article class="container--addpagepage" data-js="add-page">
+        <article class="container--addpagepage hidden" data-js="add-page">
           <article class="addpagepage--welcome">Add your own Questions!</p>
             <!-- action as target where the form is send to -->
             <!-- method POST for a anonymized form -->
