finish header layout

--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
   </head>
   <body>
     <header class="header">
-      <div class="topbar">
-        <img src="./pictures/quiz_icon.svg" class="topbar--quizicon" width="50px" height="50px" alt="Quiz Icon">
-        <h1 class="topbar--headline">Quizapp</h1>
-        <img src="./pictures/quiz_icon.svg" class="topbar--quizicon" width="50px" height="50px" alt="Quiz Icon">
+      <div class="header--box">
+        <h1 class="box--headline">QuizApp</h1>
+        <div class="box--button1">Quizcards</div>
+        <div class="box--button2">Bookmarks</div>
+        <div class="box--button3">Addpage</div>
+        <div class="box--button4"->Profile</div>
+        <div class="box--lefttopborder"></div>
+        <div class="box--leftbottomborder"></div>
+        <div class="box--bottom1"></div>
+        <div class="box--bottom1"></div>
       </div>
     </header>
     <main>
