add layout navbar

--- a/index.html
+++ b/index.html
@@ -10,17 +10,26 @@
     <link rel="shortcut icon" href="#">
   </head>
   <body>
+    <!-- Header fixed to top border -->
     <header class="header">
       <div class="header--box">
+        <!-- headline  right fixed-->
         <h1 class="box--headline">QuizApp</h1>
+        <!-- 4 nav pointer -->
         <div class="box--button1">Quizcards</div>
         <div class="box--button2">Bookmarks</div>
         <div class="box--button3">Addpage</div>
         <div class="box--button4"->Profile</div>
-        <div class="box--lefttopborder"></div>
-        <div class="box--leftbottomborder"></div>
+        <!-- left border frame -->
+        <div class="box--lefttopborder">02-34565</div>
+        <div class="box--leftbottomborder">04-67842</div>
+        <!-- bottom border from header -->
         <div class="box--bottom1"></div>
-        <div class="box--bottom1"></div>
+        <div class="box--bottom2"></div>
+        <!-- top boarder from main -->
+        <div class="box--bodylefttopborder"></div>
+        <div class="box--bodytop1"></div>
+        <div class="box--bodytop2"></div>
       </div>
     </header>
     <main>
