change layout navbar

--- a/index.html
+++ b/index.html
@@ -258,16 +258,19 @@
       <!-- Navbar -->
       <nav class="container">
         <article class="container--navbar">
-          <button class="container--mainpagebutton" data-js="nav-Quizcard">
+          <div class="navbar-bottomleftcorner"></div>
+          <div class="navbar--bottom1"></div>
+          <div class="navbar--bottom2"></div>
+          <button class="navbar--mainpagebutton" data-js="nav-Quizcard">
             Mainpage
           </button>
-          <button class="container--bookmarkpagebutton" data-js="nav-bookmark">
+          <button class="navbar--bookmarkpagebutton" data-js="nav-bookmark">
             Bookmarks
           </button>
-          <button class="container--addpagebutton" data-js="nav-addpage">
+          <button class="navbar--addpagebutton" data-js="nav-addpage">
             Addpage
           </button>
-          <button class="container--profilepagebutton" data-js="nav-profile">
+          <button class="navbar--profilepagebutton" data-js="nav-profile">
             Profile
           </button>
         </article>
