--- a/index.html
+++ b/index.html
@@ -37,142 +37,167 @@
       <div class="container">
         <article class="container--quizcardpage" data-js="quizcard-page">
           <!-- Quizcard 1 -->
-          <article class="quizcardpage--quizcard" data-js="quizcard">
+          <article class="quizcardpage--quizcard1" data-js="quizcard">
             <!-- add Bookmark Icon -->
-            <img
-              src="./pictures/bookmark_icon.png"
-              alt="bookmark icon"
-              width="40px"
-              height="40px"
-              data-js="bookmarkicon"
-              class="quizcard--bookmarkicon"
-            />
+            <div class="quizcardpage--bookmarkbox1">
+              <img
+                src="./pictures/bookmark_icon.png"
+                alt="bookmark icon"
+                width="40px"
+                height="40px"
+                data-js="bookmarkicon"
+                class="quizcard--bookmarkicon1"
+              />
+            </div>
             <!-- add Question-->
-            <p class="quizcard--question">
+            <p class="quizcard--question1">
               Mit welchem Befehl erstellt man einen neuen Ordner im Terminal?
             </p>
             <!-- add hideable Answer -->
-            <p class="quizcard--answer hidden" data-js="quizcard--answer">mkdir</p>
+            <div class="quizcard--answerbox1">
+              <p class="quizcard--answer1 hidden" data-js="quizcard--answer">mkdir</p>
+            </div>
             <!-- add Asnwerbutton -->
-            <button class="quizcard--answerbutton" data-js="quizcard--answerbutton">Show Answer</button>
+            <button class="quizcard--answerbutton1" data-js="quizcard--answerbutton">Show Answer</button>
             <!-- add Hashtags -->
-            <ul class="quizcard--hashtag">
+            <ul class="quizcard--hashtag1">
               <li># Terminal</li>
               <li># Ordnerstruktur</li>
               <li># Befehle</li>
             </ul>
+            <div class="quizcard--left1"></div>
           </article>
           <!-- Quizcard 2 -->
-          <article class="quizcardpage--quizcard" data-js="quizcard">
+          <article class="quizcardpage--quizcard2" data-js="quizcard">
             <!-- add Bookmark Icon -->
-            <img
-              src="./pictures/bookmark_icon.png"
-              alt="bookmark icon"
-              width="40px"
-              height="40px"
-              data-js="bookmarkicon"
-              class="quizcard--bookmarkicon"
-            />
+            <div class="quizcardpage--bookmarkbox2">
+              <img
+                src="./pictures/bookmark_icon.png"
+                alt="bookmark icon"
+                width="40px"
+                height="40px"
+                data-js="bookmarkicon"
+                class="quizcard--bookmarkicon2"
+              />
+            </div>
             <!-- add Question-->
-            <p class="quizcard--question">
+            <p class="quizcard--question2">
               Mit welchem Befehl deklariert man ein Objekt zu einer Flexbox?
             </p>
             <!-- add hideable Answer -->
-            <p class="quizcard--answer hidden" data-js="quizcard--answer">dislpay: flex;</p>
+            <div class="quizcard--answerbox2">
+              <p class="quizcard--answer2 hidden" data-js="quizcard--answer">dislpay: flex;</p>
+            </div>
             <!-- add Asnwerbutton -->
-            <button class="quizcard--answerbutton" data-js="quizcard--answerbutton">Show Answer</button>
+            <button class="quizcard--answerbutton2" data-js="quizcard--answerbutton">Show Answer</button>
             <!-- add Hashtags -->
-            <ul class="quizcard--hashtag">
+            <ul class="quizcard--hashtag2">
               <li># CSS</li>
               <li># HTML</li>
               <li>#Befehle</li>
             </ul>
+            <div class="quizcard--right2"></div>
           </article>
           <!-- Quizcard 3 -->
-          <article class="quizcardpage--quizcard" data-js="quizcard">
+          <article class="quizcardpage--quizcard3" data-js="quizcard">
             <!-- add Bookmark Icon -->
-            <img
-              src="./pictures/bookmark_icon.png"
-              alt="bookmark icon"
-              width="40px"
-              height="40px"
-              data-js="bookmarkicon"
-              class="quizcard--bookmarkicon"
-            />
+            <div class="quizcardpage--bookmarkbox3">
+              <img
+                src="./pictures/bookmark_icon.png"
+                alt="bookmark icon"
+                width="40px"
+                height="40px"
+                data-js="bookmarkicon"
+                class="quizcard--bookmarkicon3"
+              />
+            </div>
             <!-- add Question-->
-            <p class="quizcard--question">
+            <p class="quizcard--question3">
               Welche 3 Befehle werden benötigt um ein Repository auf Git zu pushen?
             </p>
             <!-- add hideable Answer -->
-            <p class="quizcard--answer hidden" data-js="quizcard--answer">
-                git add .</br>
-                git commit -m "comment"</br>
-                git push
-            </p>
+            <div class="quizcard--answerbox3">
+              <p class="quizcard--answer3 hidden" data-js="quizcard--answer">
+                  git add .</br>
+                  git commit -m "comment"</br>
+                  git push
+              </p>
+            </div>
             <!-- add Asnwerbutton -->
-            <button class="quizcard--answerbutton" data-js="quizcard--answerbutton">Show Answer</button>
+            <button class="quizcard--answerbutton3" data-js="quizcard--answerbutton">Show Answer</button>
             <!-- add Hashtags -->
-            <ul class="quizcard--hashtag">
+            <ul class="quizcard--hashtag3">
               <li># Terminal</li>
               <li># Git</li>
               <li># Befehle</li>
             </ul>
+            <div class="quizcard--left3"></div>
           </article>
           <!-- Quizcard 4 -->
-          <article class="quizcardpage--quizcard" data-js="quizcard">
+          <article class="quizcardpage--quizcard4" data-js="quizcard">
             <!-- add Bookmark Icon -->
-            <img
-              src="./pictures/bookmark_icon.png"
-              alt="bookmark icon"
-              width="40px"
-              height="40px"
-              data-js="bookmarkicon"
-              class="quizcard--bookmarkicon"
-            />
-            <!-- add Question-->
-            <p class="quizcard--question">
+            <div class="quizcardpage--bookmarkbox4">
+              <img
+                src="./pictures/bookmark_icon.png"
+                alt="bookmark icon"
+                width="40px"
+                height="40px"
+                data-js="bookmarkicon"
+                class="quizcard--bookmarkicon4"
+              />
+            </div>
+              <!-- add Question-->
+            <p class="quizcard--question4">
               Wie sprichst du die Klasse "article class="quizcard" im CSS an?
             </p>
             <!-- add hideable Answer -->
-            <p class="quizcard--answer hidden" data-js="quizcard--answer">.quizcard</p>
-            <!-- add Asnwerbutton -->
-            <button class="quizcard--answerbutton" data-js="quizcard--answerbutton">Show Answer</button>
+            <div class="quizcard--answerbox4">
+              <p class="quizcard--answer4 hidden" data-js="quizcard--answer">.quizcard</p>
+            </div>
+              <!-- add Asnwerbutton -->
+            <button class="quizcard--answerbutton4" data-js="quizcard--answerbutton">Show Answer</button>
             <!-- add Hashtags -->
-            <ul class="quizcard--hashtag">
+            <ul class="quizcard--hashtag4">
               <li># CSS</li>
               <li># HMTL</li>
               <li># Befehle</li>
             </ul>
+            <div class="quizcard--right4"></div>
           </article>
           <!-- Quizcard 5 -->
-          <article class="quizcardpage--quizcard" data-js="quizcard">
+          <article class="quizcardpage--quizcard5" data-js="quizcard">
             <!-- add Bookmark Icon -->
-            <img
-              src="./pictures/bookmark_icon.png"
-              alt="bookmark icon"
-              width="40px"
-              height="40px"
-              data-js="bookmarkicon"
-              class="quizcard--bookmarkicon"
-            />
-            <!-- add Question-->
-            <p class="quizcard--question">
+            <div class="quizcardpage--bookmarkbox5">
+              <img
+                src="./pictures/bookmark_icon.png"
+                alt="bookmark icon"
+                width="40px"
+                height="40px"
+                data-js="bookmarkicon"
+                class="quizcard--bookmarkicon5"
+              />
+            </div>
+              <!-- add Question-->
+            <p class="quizcard--question5">
               Welche 3 Dateien sollten in jedem deiner Projekte vorhanden sein?
             </p>
             <!-- add hideable Answer -->
-            <p class="quizcard--answer hidden" data-js="quizcard--answer">
-                README.md</br>
-                index.html</br>
-                .gitignore
-            </p>
-            <!-- add Asnwerbutton -->
-            <button class="quizcard--answerbutton" data-js="quizcard--answerbutton">Show Answer</button>
+            <div class="quizcard--answerbox5">
+              <p class="quizcard--answer5 hidden" data-js="quizcard--answer">
+                  README.md</br>
+                  index.html</br>
+                  .gitignore
+              </p>
+            </div>
+              <!-- add Asnwerbutton -->
+            <button class="quizcard--answerbutton5" data-js="quizcard--answerbutton">Show Answer</button>
             <!-- add Hashtags -->
-            <ul class="quizcard--hashtag">
+            <ul class="quizcard--hashtag5">
               <li># Git</li>
               <li># Ordnerstruktur</li>
               <li># Projekte</li>
             </ul>
+            <div class="quizcard--left5"></div>
           </article>
         </article>
       </div>
@@ -187,7 +212,7 @@
               alt="bookmark icon"
               width="40px"
               height="40px"
-              class="quizcard--bookmarkicon2"
+              class="quizcard--bookmarkicon8"
             />
             <!-- add Question-->
             <p class="quizcard--question">
