--- a/index.html
+++ b/index.html
@@ -205,29 +205,34 @@
       <div class="container">
         <article class="container--bookmarkpage hidden" data-js="bookmark-page">
           <!-- Bookmark Quizcard 1 -->
-          <article class="bookmark--quizcard">
+          <article class="bookmarkpage--bookmarkquizcard1">
             <!-- add Bookmark Icon -->
-            <img
-              src="./pictures/filled_bookmark_icon.png"
-              alt="bookmark icon"
-              width="40px"
-              height="40px"
-              class="quizcard--bookmarkicon8"
-            />
-            <!-- add Question-->
-            <p class="quizcard--question">
+            <div class="bookmarkquizcard--bookmarkbox1">
+              <img
+                src="./pictures/filled_bookmark_icon.png"
+                alt="bookmark icon"
+                width="40px"
+                height="40px"
+                class="bookmarkquizcard--bookmarkicon1"
+              />
+            </div>
+              <!-- add Question-->
+            <p class="bookmarkquizcard--question1">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, eos!?
             </p>
             <!-- add hideable Answer -->
-            <p class="quizcard--answer hidden">Lorem, ipsum dolor.</p>
-            <!-- add Asnwerbutton -->
-            <button class="quizcard--answerbutton">Show Answer</button>
+            <div class="bookmarkquizcard--answerbox1">
+              <p class="bookmarkquizcard--answer1 hidden">Lorem, ipsum dolor.</p>
+            </div>
+              <!-- add Asnwerbutton -->
+            <button class="bookmarkquizcard--answerbutton1">Show Answer</button>
             <!-- add Hashtags -->
-            <ul class="quizcard--hashtag">
+            <ul class="bookmarkquizcard--hashtag1">
               <li># Lorem, ipsum.</li>
               <li># Lorem, ipsum.</li>
               <li># Lorem, ipsum.</li>
             </ul>
+            <div class="bookmarkquizcard--left1"></div>
           </article>
         </article>
       </div>
